# quiz-ai

./: .gitignore  README.md  convert.py  exam.yml  glu.py  gluv.py  grading.sh  pipeline.sh  pyproject.toml  script.py  solutions.json  student_data.json  test-overlay.py
ai-corrector/: analysis.py
demo/: exam.yml
exam-build/: README.md  exam-demo.md  exam.yml  p1.yml  p2.yml  p3.yml  p4.yml  p5.yml  p6.yml  quad.py
exam-build/template-exam/: README.md  exam-example.md  pyproject.toml
exam-build/template-exam/texsmith_template_exam/: __init__.py  constants.py  markdown.py  renderer.py
exam-build/template-exam/texsmith_template_exam/overrides/: callout.tex  choices.tex  heading.tex
exam-build/template-exam/texsmith_template_exam/template/: hexam.sty  manifest.toml  template.tex
exam-build/tests/: fill-demo.md
exam2/: exam.tex  hexam.sty  pudu.tex
overlay/: overlay-shapes.tex
quiz_ai/: __init__.py  __main__.py  analysis.py  anchors.py  annotate.py  cli.py  decompose.py  feedback.py  grading.py  latex.py  llm.py  report.py  roster.py  split.py  utils.py
quiz_ai/assets/prompts/: analysis.prompt.md  feedback.prompt.md  feedback_name.prompt.md  grading.prompt.md  title_page.prompt.md
quizai/: annotate.py  cut.py  decompose.py  pipeline.py
qz-02/: students.xlsx
qz-02/src/: exam.tex  exam.yml  hexam.sty
sandbox/: README.md  analysis_result.json  convert.py  cut.json  exam.schema.json  exam.tex  exam.yml  glu.py  gluv.py  pipeline.py  prout2.py  script.py  test-overlay.py
sandbox/exam2/: exam.tex
sandbox/regions/: analysis_result.json  analysis_result2.json  extrait-q2.json  identify.md  jpg.json  prout.py
te1/src/: exam.listing  exam.tex  exam.yml  heiglogo.sty  hexam.sty  problem1.tex  problem2.tex  problem3.c  problem3.tex  problem4.c  problem4.tex  problem5.c  problem5.tex  te1-anchors.json  test-box.tex
