[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "texsmith-template-exam"
version = "0.1.0"
description = "Exam-oriented TeXSmith template with question/part overrides."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "TexSmith Contributors" }
]
keywords = ["texsmith", "latex", "template", "exam"]
dependencies = ["texsmith>=0.1,<1.0"]

[project.urls]
Homepage = "https://github.com/yves-chevallier/texsmith"

[project.entry-points."texsmith.templates"]
exam = "texsmith_template_exam:Template"

[project.entry-points."texsmith.renderers"]
texsmith_exam = "texsmith_template_exam.renderer:register"

[tool.hatch.build.targets.wheel]
exclude = ["__pycache__", "*.pyc"]

[tool.hatch.build.targets.wheel.force-include]
"." = "texsmith_template_exam"

[tool.hatch.build.targets.sdist]
exclude = ["__pycache__", "*.pyc"]

[tool.hatch.build.targets.sdist.force-include]
"." = "texsmith_template_exam"
